--- a/index.html
+++ b/index.html
@@ -93,45 +93,47 @@
         </div>
     </div>
 
-    <div id="content" class="modal2"> 
-            <div class="container content_container">
-                <form action="" class="form-control" style="background: whitesmoke;">
-                    <div class="form-group">
-                        <div style="width: 600px;">3.4. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam harum nulla illum sit aut qui, earum adipisci rem expedita quia vero numquam tempora esse! Tempora excepturi repellat harum architecto quaerat.</div>
-                        <br>
-                        <div class="bg_white"><input type="radio" name="" id=""><span>Yes</span><br></div>
-                        <div class="bg_white"><input type="radio" name="" id=""><span>No</span></div>
-                    </div>
-                    <div class="form-group">
-                        <div style="width: 600px;">3.4. Did the Director make attempts to verify the corporation's bank
-                            accounts to ensure that the
-                            remittances were made ?</div>
-                        <br>
-                        <div class="bg_white"><input type="radio" name="" id=""><span>Yes</span><br></div>
-                        <div class="bg_white"><input type="radio" name="" id=""><span>No</span></div>
-                    </div>
-                    <div class="form-group" style="margin-bottom: 50px;">
-                        <div style="width: 600px;">3.4. Did the Director make attempts to verify the corporation's bank
-                            accounts to ensure that the
-                            remittances were made ?</div>
-                        <br>
-                        <div class="bg_white"><input type="radio" name="" id=""><span>Yes</span><br></div>
-                        <div class="bg_white"><input type="radio" name="" id=""><span>No</span></div>
-                    </div>
-                </form>
-                <div class="left_btn2 arrow_left_btn">
-                    <div class="left_bg">
-                        <img src="./img/left-arrow.png" alt="">
-                    </div>
+    <div id="content" class="modal2">
+        <div class="container content_container">
+            <form action="" class="form-control" style="background: whitesmoke;">
+                <div class="form-group">
+                    <div style="width: 600px;">3.4. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
+                        harum nulla illum sit aut qui, earum adipisci rem expedita quia vero numquam tempora esse!
+                        Tempora excepturi repellat harum architecto quaerat.</div>
+                    <br>
+                    <div class="bg_white"><input type="radio" name="" id=""><span>Yes</span><br></div>
+                    <div class="bg_white"><input type="radio" name="" id=""><span>No</span></div>
                 </div>
-    
-                <div class="right_btn2 arrow_right_btn">
-                    <div class="left_bg">
-                        <img src="./img/right-arrow.png" alt="">
-                    </div>
+                <div class="form-group">
+                    <div style="width: 600px;">3.4. Did the Director make attempts to verify the corporation's bank
+                        accounts to ensure that the
+                        remittances were made ?</div>
+                    <br>
+                    <div class="bg_white"><input type="radio" name="" id=""><span>Yes</span><br></div>
+                    <div class="bg_white"><input type="radio" name="" id=""><span>No</span></div>
+                </div>
+                <div class="form-group" style="margin-bottom: 50px;">
+                    <div style="width: 600px;">3.4. Did the Director make attempts to verify the corporation's bank
+                        accounts to ensure that the
+                        remittances were made ?</div>
+                    <br>
+                    <div class="bg_white"><input type="radio" name="" id=""><span>Yes</span><br></div>
+                    <div class="bg_white"><input type="radio" name="" id=""><span>No</span></div>
+                </div>
+            </form>
+            <div class="left_btn2 arrow_left_btn">
+                <div class="left_bg">
+                    <img src="./img/left-arrow.png" alt="">
+                </div>
+            </div>
+
+            <div class="right_btn2 arrow_right_btn">
+                <div class="left_bg">
+                    <img src="./img/right-arrow.png" alt="">
                 </div>
             </div>
         </div>
+    </div>
 
     <script src="./scripts/script.js"></script>
 </body>
