--- a/index.html
+++ b/index.html
@@ -1,139 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
-    
+    <link rel="stylesheet" href="./css/landing.css">
     <title>Lex Simulator</title>
-    </head>
+</head>
+
 <body>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark sticky-top">
-        <a class="navbar-brand" href="#">LEX<span>SIMULATOR</span></a>
-        <div class="hamburger_btn">
-            <img src="./img/menu.png" alt="" class="hamburger_img">
-        </div>
-    </nav>
-
-
-    <!-- Sidebar -->
-    <nav id="sidebar" class="col-lg-2">
-        <div class="sidebar-header">
-            <h6>Directors Liability classifier<img src="./img/drop.png" id="drop_btn"></h6>
-        </div>
-        <ul class="list-unstyled components">
-            <li>
-                <div><a href="#">Background</a></div>
-            </li>
-            <li>
-                <div><a href="#">Control</a></div>
-            </li>
-            <li>
-                <div><a href="#">Preventative actions</a></div>
-            </li>
-            <li>
-                <div><a href="#">Remedial options</a></div>
-            </li>
-            <li>
-                <div><a href="#">Legislation</a></div>
-            </li>
-            <li>
-                <div><a href="#">Result</a></div>
-            </li>
-        </ul>
-    </nav>
-
-
-    <div id="content" class="modal1">
-        <div class="container content_container">
-            <form action="" class="form-control" style="background: whitesmoke;">
-                <div class="form-group">
-                    <div style="width: 600px;">3.4. Did the Director make attempts to verify the corporation's bank
-                        accounts to ensure that the
-                        remittances were made ?</div>
-                    <br>
-                    <div class="bg_white"><input type="radio" name="" id=""><span>Yes</span><br></div>
-                    <div class="bg_white"><input type="radio" name="" id=""><span>No</span></div>
-                </div>
-                <div class="form-group">
-                    <div style="width: 600px;">3.4. Did the Director make attempts to verify the corporation's bank
-                        accounts to ensure that the
-                        remittances were made ?</div>
-                    <br>
-                    <div class="bg_white"><input type="radio" name="" id=""><span>Yes</span><br></div>
-                    <div class="bg_white"><input type="radio" name="" id=""><span>No</span></div>
-                </div>
-                <div class="form-group" style="margin-bottom: 50px;">
-                    <div style="width: 600px;">3.4. Did the Director make attempts to verify the corporation's bank
-                        accounts to ensure that the
-                        remittances were made ?</div>
-                    <br>
-                    <div class="bg_white"><input type="radio" name="" id=""><span>Yes</span><br></div>
-                    <div class="bg_white"><input type="radio" name="" id=""><span>No</span></div>
-                </div>
-            </form>
-            <div class="left_btn1 arrow_left_btn">
-                <div class="left_bg">
-                    <img src="./img/left-arrow.png" alt="">
-                </div>
+    <h1 class="display-3 font-weight-bold text-center heading">Lex<span>Simulate</span></h1>
+    <div class="dropdown drop_down">
+        <button class="btn btn-light dropdown-toggle drop_down_btn" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            <span>Select Category</span>
+        </button>
+        <div class="dropdown-menu drop_down_menu text-left" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item more_drop" href="#">
+                Income Vs Capital
+            </a>
+            <div class="sub_drop1 sub_drop">
+                    <a href="#" class="drop-down-item">Tangible Expenditure</a>
+                    <a href="#" class="drop-down-item">Intangible Expenditure</a>
+                    <a href="#" class="drop-down-item">Real Estate</a>
+                    <a href="#" class="drop-down-item">Securities Trading</a>
             </div>
-
-            <div class="right_btn1 arrow_right_btn">
-                <div class="left_bg">
-                    <img src="./img/right-arrow.png" alt="">
-                </div>
+            <a class="dropdown-item more_drop" href="#">
+                Source of Income    
+            </a>
+            <div class="sub_drop2 sub_drop">
+                    <a href="#" class="drop-down-item">Warker</a>
+                    <a href="#" class="drop-down-item">Windface</a>
+                    <a href="#" class="drop-down-item">Business Vs Property</a>
+            </div>
+            <a class="dropdown-item more_drop" href="#">
+                Deductors    
+            </a>
+            <div class="sub_drop3 sub_drop">
+                    <a href="#" class="drop-down-item">Home / Office</a>
+            </div>
+            <a class="dropdown-item more_drop" href="#">
+                Income Tax    
+            </a>
+            <div class="sub_drop4 sub_drop">
+                    <a href="./home.html" class="drop-down-item">Director's Liability</a>
+            </div>
+            <a class="dropdown-item more_drop" href="#">
+                Penalities    
+            </a>
+            <div class="sub_drop5 sub_drop">
+                    <a href="#" class="drop-down-item">Gross Negligence</a>
+                    <a href="#" class="drop-down-item">Director's Liability</a>
             </div>
         </div>
     </div>
 
-    <div id="content" class="modal2">
-        <div class="container content_container">
-            <form action="" class="form-control" style="background: whitesmoke;">
-                <div class="form-group">
-                    <div style="width: 600px;">3.4. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
-                        harum nulla illum sit aut qui, earum adipisci rem expedita quia vero numquam tempora esse!
-                        Tempora excepturi repellat harum architecto quaerat.</div>
-                    <br>
-                    <div class="bg_white"><input type="radio" name="" id=""><span>Yes</span><br></div>
-                    <div class="bg_white"><input type="radio" name="" id=""><span>No</span></div>
-                </div>
-                <div class="form-group">
-                    <div style="width: 600px;">3.4. Did the Director make attempts to verify the corporation's bank
-                        accounts to ensure that the
-                        remittances were made ?</div>
-                    <br>
-                    <div class="bg_white"><input type="radio" name="" id=""><span>Yes</span><br></div>
-                    <div class="bg_white"><input type="radio" name="" id=""><span>No</span></div>
-                </div>
-                <div class="form-group" style="margin-bottom: 50px;">
-                    <div style="width: 600px;">3.4. Did the Director make attempts to verify the corporation's bank
-                        accounts to ensure that the
-                        remittances were made ?</div>
-                    <br>
-                    <div class="bg_white"><input type="radio" name="" id=""><span>Yes</span><br></div>
-                    <div class="bg_white"><input type="radio" name="" id=""><span>No</span></div>
-                </div>
-            </form>
-            <div class="left_btn2 arrow_left_btn">
-                <div class="left_bg">
-                    <img src="./img/left-arrow.png" alt="">
-                </div>
-            </div>
-
-            <div class="right_btn2 arrow_right_btn">
-                <div class="left_bg">
-                    <img src="./img/right-arrow.png" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
-
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
     <script src="./scripts/script.js"></script>
 </body>
 </html>
